--- a/home.html
+++ b/home.html
@@ -20,6 +20,7 @@
             
             <h1>Choosing Dinner</h1>
             <div id="resetBtn">RESET</div>
+            <div id="historyBtn">HISTORY</div>
         </div>
         <div id="leftArea">
             <h3>Chosen Options</h3>
@@ -38,6 +39,12 @@
                 <div id="finalRecipeArea">
                 </div>
 
+            </div>
+        </div>
+        <div class="myoverlay" id="myoverlay">
+            <div class="myoverlay-content">
+                <span class="myoverlay-close-button" id="closemyoverlay">X</span>
+                <div id="myoverlay-real-content"></div>
             </div>
         </div>
     </body>
