fix: a few fixes and smalls improvements

--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
             <h3>Chosen Options</h3>
             <span id="askBtn">Ask For
                 <select id="recipeNb">
+                    <option>5</option>
                     <option selected>10</option>
                     <option>15</option>
                     <option>20</option>
